--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 asgiref==3.4.1
 attrs==21.2.0
 certifi==2021.5.30
+cffi==1.14.6
 click==8.0.1
+cryptography==3.4.7
 fastapi==0.66.1
 greenlet==1.1.0
 h11==0.12.0
 jsonschema==3.2.0
+pycparser==2.20
 pydantic==1.8.2
+PyJWT==2.1.0
 pyrsistent==0.18.0
+python-multipart==0.0.5
 PyYAML==5.4.1
 six==1.16.0
 SQLAlchemy==1.4.22
