--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,15 @@ pycparser==2.20
 pydantic==1.8.2
 PyJWT==2.1.0
 pyrsistent==0.18.0
+python-dateutil==2.8.2
+python-http-client==3.3.2
 python-multipart==0.0.5
 PyYAML==5.4.1
+sendgrid==6.7.1
 six==1.16.0
 SQLAlchemy==1.4.22
 sqlalchemy-seeder==0.3.0
+starkbank-ecdsa==1.1.1
 starlette==0.14.2
 typing-extensions==3.10.0.0
 uvicorn==0.14.0
